--- a/src/styles/weather-grid-item.css
+++ b/src/styles/weather-grid-item.css
@@ -33,3 +33,8 @@
     .grid_label {font-size: 20px;}
     .grid_icon {font-size: 85px;}
 }
+
+@media only screen and (max-width: 500px) {
+    .grid_label {font-size: 15px;}
+    .grid_icon {font-size: 75px;}
+}
